--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/drawer": "^7.7.5",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "expo": "~54.0.11",
     "expo-clipboard": "~8.0.7",
+    "expo-crypto": "~15.0.7",
+    "expo-file-system": "~19.0.19",
+    "expo-image-picker": "~17.0.8",
     "expo-sqlite": "~16.0.9",
     "expo-status-bar": "~3.0.8",
     "react": "^19.1.0",
